[workspace]
members = [
    "contracts/*",
]
resolver = "2"

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = true     # Disable integer overflow checks.


[workspace.dependencies]
cosmwasm-schema  = "2.1.1"
cosmwasm-std     = { version = "2.1.1", features = ["stargate", "cosmwasm_2_0"] }
cw2              = "2.0.0"
cw-storage-plus  = "2.0.0"
hex              = "0.4"
sha2             = { version = "0.10.8", features = ["oid"]}
thiserror        = "1"
tiny-keccak      = { version = "2", features = ["keccak"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
schemars = "0.8.10"
ripemd = "0.1.3"
bech32 = "0.9.1"
base64 = "0.21.4"
rsa = { version = "0.9.2" }
getrandom = { version = "0.2.10", features = ["custom"] }
p256 = {version = "0.13.2", features = ["ecdsa-core", "arithmetic", "serde"]}
cosmos-sdk-proto = {package = "xion-cosmos-sdk-proto", version = "0.26.1", default-features = false, features = ["std", "cosmwasm", "xion", "serde"]}
url = "2.5.2"
base64ct = "=1.7.2" # can't upgrade until after version 2024