[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
absacc            = { git = "https://github.com/larry0x/abstract-account.git" }
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
cw-storage-plus   = { workspace = true }
sha2              = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tiny-keccak       = { workspace = true }
schemars          = { workspace = true }
hex               = { workspace = true }
ripemd            = { workspace = true }
bech32            = { workspace = true }
base64            = { workspace = true }
phf               = { workspace = true }
rsa               = { workspace = true }
getrandom         = { workspace = true }
p256              = { workspace = true }
url = "2.4.1"
coset = "0.3.5"
futures = "0.3.29"
async-trait = "0.1.74"
prost = {version = "0.11.2", default-features = false, features = ["prost-derive"]}
osmosis-std-derive = "0.13.2"
num-bigint = "0.4.4"

# zk deps
ark-crypto-primitives = { version = "=0.4.0" }
ark-ec = { version = "=0.4.2", default-features = false  }
ark-ff = { version = "=0.4.2", default-features = false, features = [ "asm"] }
ark-std = { version = "=0.4.0", default-features = false }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false }
ark-relations = { version = "=0.4.0", default-features = false }
ark-serialize = { version = "=0.4.2", default-features = false }
ark-poly = { version = "0.4.1", default-features = false }
poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark"}
