[package]
name = "treasury"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw2               = { workspace = true }
cw-storage-plus   = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
schemars          = { workspace = true }
cosmos-sdk-proto = {git = "https://github.com/burnt-labs/cosmos-rust.git", rev = "5ebab1c7b986b71036a220de2e912beca43d3019", features = ["cosmwasm"]}
prost = "0.12.6"
osmosis-std-derive = "0.13.2"
prost-types = "0.12.6"
pbjson-types = "0.6.0"