[package]
name = "xion-account"
version = "0.1.0"
edition = "2021"
description = "Primary MetaAccount implementation for XION network"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# enable feature if you want to disable entry points
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-storage-plus    = { workspace = true }
sha2               = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tiny-keccak        = { workspace = true }
schemars           = { workspace = true }
hex                = { workspace = true }
ripemd             = { workspace = true }
bech32             = { workspace = true }
base64             = { workspace = true }
rsa                = { workspace = true }
getrandom          = { workspace = true }
p256               = { workspace = true }
cosmos-sdk-proto   = { workspace = true }
zkemail = {path = "../zkemail", features = ["library"]}