[package]
description = "Primary MetaAccount implementation for XION network"
edition     = "2021"
license     = "Apache-2.0"
name        = "xion-account"
version     = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# enable feature if you want to disable entry points
library = []

[dependencies]
base64           = { workspace = true }
bech32           = { workspace = true }
cosmos-sdk-proto = { workspace = true }
cosmwasm-schema  = { workspace = true }
cosmwasm-std     = { workspace = true }
cw-storage-plus  = { workspace = true }
cw2              = { workspace = true }
getrandom        = { workspace = true }
hex              = { workspace = true }
p256             = { workspace = true }
ripemd           = { workspace = true }
rsa              = { workspace = true }
schemars         = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
tiny-keccak      = { workspace = true }
