[package]
description = "Primary Asset Contract implementation for XION network"
edition     = "2024"
license     = "Apache-2.0"
name        = "asset"
version     = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }

[features]
asset_base = []
crossmint  = []
default    = ["asset_base"]
library    = []
