[package]
name = "ios-app-attest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# enable feature if you want to disable entry points
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-storage-plus    = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
#appattest-rs = {git = "https://github.com/mvid/appattest-rs.git", rev = "86ff67e0fabb9465790b9111e80d1f9d86622553"}
appattest-rs = {path = "../../../../reliq/appattest-rs"}
ciborium = "0.2.2"

[dev-dependencies]
cw-orch = "0.28.0"
base64 = "0.22.1"
