[package]
name = "play_integrity_classic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw-storage-plus    = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
schemars           = { workspace = true }
serde_json         = { workspace = true }
prost              = "0.13"

[dev-dependencies]
base64             = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
p256 = { workspace = true, features = ["pkcs8", "ecdsa-core", "arithmetic"] }
josekit = "0.10"
