[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# enable feature if you want to disable entry points
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-storage-plus    = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
schemars           = { workspace = true }
cosmos-sdk-proto   = { workspace = true }

[dev-dependencies]
cw721-proxy = {path = "../cw721-proxy"}
cw721 = {git = "https://github.com/public-awesome/cw-nfts.git", version = "0.19.0"}
