[package]
name = "reclaim-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# enable feature if you want to disable entry points
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { version = "1.5.0"}
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }

[dev-dependencies]
cw-orch = "0.24.1"
reclaim-cosmwasm = {git="https://github.com/reclaimprotocol/cosmwasm-sdk-onchain-integration", default-features = false, features = ["vanilla"]}
