[package]
name = "tf20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
cw-storage-plus    = { workspace = true }
cw-utils = { workspace = true}
cosmos-sdk-proto = {workspace = true}
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
cw-controllers = "2.0.0"
thiserror = { workspace = true }
[dev-dependencies]