[package]
name = "zkshuffle-cw"
version = "0.1.1"
authors = ["zkShuffle Contributors"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.2"
cosmwasm-std = { version = "2.2.2", features = ["stargate", "cosmwasm_2_1"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
once_cell = "1.18.0"
schemars = "0.8.10"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.50"
cosmos-sdk-proto = { package = "cosmos-sdk-proto", git = "https://github.com/burnt-labs/cosmos-rust", branch = "feat/xion-zk", default-features = false, features = [
  "cosmwasm",
  "xion",
] }

[dev-dependencies]
cw-multi-test = "0.17.0"
