[package]
name = "zkemail"
version = "0.1.0"
edition = "2021"

[features]
# enable feature if you want to disable entry points
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema    = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
cw-storage-plus    = { workspace = true }
cosmwasm-std       = { workspace = true }
cw2                = { workspace = true }
thiserror          = { workspace = true }
base64             = { workspace = true }
cosmos-sdk-proto   = { workspace = true }
getrandom          = { workspace = true }

ark-crypto-primitives = { version = "=0.5.0", default-features = false, features = [] }
ark-ec = { version = "=0.5.0", default-features = false, features = []  }
ark-ff = { version = "=0.5.0", default-features = false, features = [ "asm"] }
ark-std = { git = "https://github.com/ash-burnt/arkworks-std", rev = "abc512310d30b324b58ad6c6c45f7249b3a36ca9", default-features = false, features = []}
ark-bn254 = { version = "=0.5.0" , features = ["scalar_field"]}
ark-groth16 = { version = "=0.5.0", default-features = false, features = [] }
ark-relations = { version = "=0.5.1", default-features = false, features = [] }
ark-serialize = { version = "=0.5.0", default-features = false, features = [] }
ark-poly = { version = "=0.5.0", default-features = false, features = [] }